/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-11-07 Joe                Fixed deprecated preg_replace in php >= 5.3.0 with the /e flag in utf8 reports.
2014-10-28 Joe                Improved calculation of standard cost in advanced manufacturing even if qoh = 0.
2014-10-27 Janusz Dobrowolski Fixed 'C' english language display on Install/Update Languages page, to allow its selection on first page.
2014-10-15 Janusz Dobrowolski Restoring compressed sql files sometimes failed due to nasty bug in php gzfile function.
2014-10-08 Janusz Dobrowolski Fixed contact record creation when new customer is added (reference/name were superseded).
2014-10-01 Joe                Improved layout Reports Customer / Supplier Balances.
2014-10-01 Joe                Wrong domestic open balance in Report Supplier Balance for currency suppliers.

2014-09-29 16:04 +0200 Joe
(3421) Changelog change
 CHANGELOG.txt

2014-09-29 15:57 +0200 Joe
(3420) Release 2.3.22
 update.html
 version.php

2014-09-29 15:35 +0200 Janusz Dobrowolski
(3419) Updated gettext template.
 lang/new_language_template/LC_MESSAGES/empty.po

2014-09-26 15:34 +0200 Joe
(3418) Updated en_US-demo.sql and en_US-new.sql COAs
 sql/en_US-demo.sql
 sql/en_US-new.sql

2014-09-24 23:42 +0200 Joe
(3417) Global option for printing item images on sales quotations.
 config.default.php
 reporting/rep111.php

2014-09-24 07:51 +0200 Joe
(3416) Improved Tax Report. Bank Payments/Deposits show 'order to/name' info in name column.
 reporting/rep709.php

2014-09-22 23:20 +0200 Janusz Dobrowolski
(3415) Small cleanups.
 inventory/transfers.php
 sales/includes/ui/sales_order_ui.inc

2014-09-21 00:09 +0200 Janusz Dobrowolski