@@ -284,7 +284,7 @@ function db_import($filename, $connection, $force=true)
 
 	ini_set("max_execution_time", "180");
 	db_query("SET foreign_key_checks=0");
-	$check_line_end = false;
+	$check_line_len = false;
 	// uncrompress gziped backup files
 	if (strpos($filename, ".gz") || strpos($filename, ".GZ"))
 	{	$lines = db_ungzip("lines", $filename);
