@@ -43,7 +43,7 @@ input, select {
 }
 
 select {
-    max-width: 200px;
+    max-width: 230px;
 }
 
 option.inactive {
